--- a/client/home/css/styles.css
+++ b/client/home/css/styles.css
@@ -132,7 +132,17 @@ hr{
    margin: 10px 0;
    border: 1px solid #ccc;
 }
-
+.user-image{
+   width: 50px;
+   height: 50px;
+   border-radius: 50%;
+   object-fit: cover;
+}
+.greet-name{
+   font-size: 1.5em;
+   font-weight: 600;
+   color: #333;
+}
 
 
 
