--- a/client/home/css/styles.css
+++ b/client/home/css/styles.css
@@ -143,8 +143,30 @@ hr{
    font-weight: 600;
    color: #333;
 }
+.user-card{
+   display: flex;
+   flex-direction: row;
+   justify-content: center;
+   align-items: center;
+   padding: 10px;
+   background-color: #fff;
+   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+   transition: box-shadow, scale 0.3s ease;
+}
 
-
+.logout{
+   display: flex;
+   flex-direction: row;
+   justify-content: center;
+   align-items: center;
+   padding: 1em;
+   border-radius: 12px;
+   background-color: #B86566;
+   border-color: transparent;
+   cursor: pointer;
+   color: #fff;
+   font-size: medium;
+}
 
 
 
@@ -154,6 +176,9 @@ hr{
        width: 100%; 
        padding: 5px; 
        
+   }
+   .user-card {
+       flex-direction: column; 
    }
    .event-image{
          width: 100%;
